# ppc64le-hslua-version

./: README.md  hslua-ppc64le.spec  pandoc-version.cabal  pandoc.hs
app/: pandoc.hs
rpm/: pandoc-version.spec
