name:                pandoc-version
version:             0.5
synopsis:            One line summary
description:
        Short paragraph here
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2023  Jens Petersen <juhpetersen@gmail.com>
category:            Unclassified
homepage:            https://github.com/juhp/pandoc-version
bug-reports:         https://github.com/juhp/pandoc-version/issues
build-type:          Simple
extra-doc-files:     README.md
cabal-version:       2.0
tested-with:         GHC == 9.0.2
                      || == 9.2.5
                      || == 9.4.5

source-repository head
  type:                git
  location:            https://github.com/juhp/ppc64le-hslua-version.git

executable pandoc-version
  main-is:             pandoc.hs
  build-depends:       base < 5,
                       bytestring,
                       hslua,
                       lua
  default-language:    Haskell2010
  ghc-options:         -Wall -O0
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
